[package]
name = "nex_os"
version = "0.1.0"
authors = ["Chirag-droid <chirag.singla.pi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.26.0", features = ["alloc"] }
uefi-services = "0.23.0"
