cargo-features = ["per-package-target"]

[package]
name = "boot"
version = "0.1.0"
authors = ["Chirag-droid <chirag.singla.pi@gmail.com>"]
edition = "2021"
forced-target = "x86_64-unknown-uefi"

[dependencies]
uefi = { version = "0.26.0", features = ["alloc"] }
uefi-services = "0.23.0"
log = "0.4.20"
slint = { version = "1.3.2", default-features = false, features = [
    "compat-1-2",
    "renderer-software",
    "libm",
    "log",
    "unsafe-single-threaded"
]}
xmas-elf = "0.9.1"

[build-dependencies]
slint-build = "1.3.2"
